--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@uniswap/swap-router-contracts": "^1.1.0",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "@uniswap/v3-periphery": "^1.4.0",
+    "axios": "^0.26.0",
     "chai": "^4.3.6",
     "dotenv": "^8.2.0",
     "ethers": "^5.5.3",
